// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages serviceList should render an error when the error flag is set to true 1`] = `
<Component
  description="Service List selection page of the Fares Data Build Tool"
  title="Service List - Fares Data Build Tool"
>
  <CsrfForm
    action="/api/serviceList"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Choose at least one service from the list",
            "id": "service-list-error",
          },
        ]
      }
    />
    <div
      className="govuk-form-group"
    >
      <fieldset
        aria-describedby="service-list-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="service-list-page-heading"
          >
            Which service(s) is the ticket valid for?
          </h1>
        </legend>
        <span
          className="govuk-error-message"
          id="radio-error"
        >
          <span
            className=""
          >
            Choose at least one service from the list
          </span>
        </span>
      </fieldset>
      <fieldset
        aria-describedby="service-list-hint"
        className="govuk-fieldset"
      >
        <span
          className="govuk-hint"
          id="service-list-hint"
        >
          Select all services that apply
        </span>
        <input
          className="govuk-button govuk-button--secondary"
          id="select-all-button"
          name="selectAll"
          type="submit"
          value="Select All"
        />
        <span
          className="govuk-hint"
          id="traveline-hint"
        >
          This data is taken from the Traveline National Dataset.
        </span>
        <FormElementWrapper
          errorClass="govuk-form-group--error"
          errorId="service-list-error"
          errors={
            Array [
              Object {
                "errorMessage": "Choose at least one service from the list",
                "id": "service-list-error",
              },
            ]
          }
        >
          <div
            className="govuk-checkboxes"
          />
        </FormElementWrapper>
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages serviceList should render correctly 1`] = `
<Component
  description="Service List selection page of the Fares Data Build Tool"
  title="Service List - Fares Data Build Tool"
>
  <CsrfForm
    action="/api/serviceList"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group"
    >
      <fieldset
        aria-describedby="service-list-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="service-list-page-heading"
          >
            Which service(s) is the ticket valid for?
          </h1>
        </legend>
        <span
          className="govuk-error-message"
          id="radio-error"
        >
          <span
            className="govuk-visually-hidden"
          />
        </span>
      </fieldset>
      <fieldset
        aria-describedby="service-list-hint"
        className="govuk-fieldset"
      >
        <span
          className="govuk-hint"
          id="service-list-hint"
        >
          Select all services that apply
        </span>
        <input
          className="govuk-button govuk-button--secondary"
          id="select-all-button"
          name="selectAll"
          type="submit"
          value="Select All"
        />
        <span
          className="govuk-hint"
          id="traveline-hint"
        >
          This data is taken from the Traveline National Dataset.
        </span>
        <FormElementWrapper
          errorClass="govuk-form-group--error"
          errorId=""
          errors={Array []}
        >
          <div
            className="govuk-checkboxes"
          >
            <div
              className="govuk-checkboxes__item"
              key="checkbox-item-123"
            >
              <input
                className="govuk-checkboxes__input"
                defaultChecked={false}
                id="checkbox-0"
                name="123#NW_05_BLAC_123_1#05/02/2020"
                type="checkbox"
                value="IW Bus Service 123"
              />
              <label
                className="govuk-label govuk-checkboxes__label"
                htmlFor="checkbox-0"
              >
                123 - IW Bus Service 123 (Start Date 05/02/2020)
              </label>
            </div>
            <div
              className="govuk-checkboxes__item"
              key="checkbox-item-X1"
            >
              <input
                className="govuk-checkboxes__input"
                defaultChecked={false}
                id="checkbox-1"
                name="X1#NW_05_BLAC_X1_1#06/02/2020"
                type="checkbox"
                value="Big Blue Bus Service X1"
              />
              <label
                className="govuk-label govuk-checkboxes__label"
                htmlFor="checkbox-1"
              >
                X1 - Big Blue Bus Service X1 (Start Date 06/02/2020)
              </label>
            </div>
            <div
              className="govuk-checkboxes__item"
              key="checkbox-item-Infinity Line"
            >
              <input
                className="govuk-checkboxes__input"
                defaultChecked={false}
                id="checkbox-2"
                name="Infinity Line#WY_13_IWBT_07_1#07/02/2020"
                type="checkbox"
                value="This is some kind of bus service"
              />
              <label
                className="govuk-label govuk-checkboxes__label"
                htmlFor="checkbox-2"
              >
                Infinity Line - This is some kind of bus service (Start Date 07/02/2020)
              </label>
            </div>
          </div>
        </FormElementWrapper>
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;
